--- a/MyFirstWebPage.html
+++ b/MyFirstWebPage.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A05 Homepage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <h1>Username: Mattheos Celikel (mdc3)</h1>
-    <h2>Course Name: IS117</h2>
-    <h3>Section: 001 </h3>
+    <header>
+        <h1>Username: Mattheos Celikel (mdc3)</h1>
+        <h2>Course Name: IS117</h2>
+        <h3>Section: 001</h3>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="Under-Construction.jpg">Under Construction Picture</a></li>
+        </ul>
+    </nav>
+    <footer>
+        <p>&copy; Mattheos Celikel, 2024</p>
+    </footer>
 </body>
 </html>
