--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
+        <img src="NJIT_Highlanders_logo.jpg" alt="NJIT logo" style="display: block; margin: 20px auto; width: 100%; max-width: 600px;">
         <h1>Username: Mattheos Celikel (mdc3)</h1>
         <h2>Course Name: IS117</h2>
         <h3>Section: 001</h3>
     </header>
     <nav>
         <ul>
-            <li><a href="Under-Construction.jpg">Under Construction Picture</a></li>
+            <li><a href="Under-Construction.jpg">Brancaccio / Under Construction Picture</a></li>
         </ul>
     </nav>
     <footer>
