A05 changing njit logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="NJIT_Highlanders_logo.jpg" alt="NJIT logo" style="display: block; margin: 20px auto; width: 100%; max-width: 600px;">
+        <img src="njitlogo.png" alt="NJIT logo" style="display: block; margin: 20px auto; width: 100%; max-width: 600px;">
         <h1>Username: Mattheos Celikel (mdc3)</h1>
         <h2>Course Name: IS117</h2>
         <h3>Section: 001</h3>
